[package]
categories = ["database"]
description = "A query-building & utility crate for SurrealDB and its SQL querying language that aims to be simple"
edition = "2021"
keywords = ["surrealdb", "querybuilder", "query", "builder"]
license = "MIT"
name = "surreal-simple-querybuilder"
readme = "README.md"
repository = "https://github.com/Aelto/surreal-simple-querybuilder"
version = "0.3.2"

[workspace]
members = [
  "model-proc-macro",
]

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}

surreal-simple-querybuilder-proc-macro = "0.1.0"

[dev-dependencies]
serde_json = "1.0"
